--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </section>
 
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-    <script src="apisearch.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
