--- a/index.html
+++ b/index.html
@@ -41,14 +41,15 @@
                 <input id="checkbox" type="checkbox">
                 <span class=""></span>
             </label>
+            <div class="container">
+                <div class="weather"></div>
 
-            <div class="weather"></div>
+                <div class="longWeather"></div>
 
-            <div class="longWeather"></div>
+                <div class="blurb"> </div>
 
-            <div class="blurb"> </div>
-
-            <div class="strava"> </div>
+                <div class="strava"> </div>
+            </div>
 
         </section>
 
