making changes to Script

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <form action="submit" class="searchForm">
             <label class="visuallyhidden" for="location">Enter a location</label>
             <input type="search" class="searchBar autocomplete" name="location" placeholder="Where are you running?" id="location">
-            <button type="submit" id="submitButton" class="searchButton"><i aria-hidden class="fas fa-search-location"></i></button>
+            <button type="submit" id="submitButton" class="searchButton">Go Running! <i aria-hidden class="fas fa-search-location"></i></button>
         </form>
 
 
