Commiting to repo

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <form action="submit" class="searchForm">
             <label class="visuallyhidden" for="location">Enter a location</label>
             <input type="search" class="searchBar autocomplete" name="location" placeholder="Where are you running?" id="location">
-            <button type="submit" id="submitButton" class="searchButton"><i aria-hidden class="fas fa-search-location"></i>Go running</button>
+            <button type="submit" id="submitButton" class="searchButton">Go running</button>
         </form>
 
         <div class="about">
@@ -49,8 +49,8 @@
         <section class="returnedContent wrapper">
             
             <label aria-checked class="switch">
-                <input id="checkbox" type="checkbox">
-                <span class=""></span>
+                <input id="switch" type="checkbox" checked>
+                <span class="slider round"></span>
             </label>
             <div class="container"></div>
                 <div class="weather"></div>
