--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <a class="openSwitch" href="#"><i class="fas fa-info-circle""></i><span class="visuallyhidden">click to open about section</span></label></a>
                 <div class="aboutContent">
                     <p>This is Run Forecast. Your last stop on the way out the door. Up to date current weather based on the conditions that affect you mid-run. Windspeed, apparent temperatre humidity and even UV index warnings.</p>
-                    <p>Enter your location and hit 'show results' and get your forecast. Toggle 'long run' to see the forecast for the next two hours so you don't get stranded in the rain at kilometer 15.</p>
+                    <p>Enter your location and hit 'show results' and get the forecast. Toggle 'long run' to see the forecast for the next two hours so you don't get stranded in the rain at kilometer 15.</p>
                     <a href="#" class="closeSwitch"><i aria-hidden class="fas fa-times-circle"></i><span class="visuallyhidden">click to close about section</span></a>
                 </div>
             </div>
@@ -55,9 +55,13 @@
                     <span class="slider round"></span>
                 </label>
                 <!-- container for current weather -->
-                <div class="weather"></div>
+                <div class="weather">
+                    <p>Current Weather</p>
+                </div>
                 <!-- container for weather forecast -->
-                <div class="longWeather"></div>
+                <div class="longWeather">
+                    <p>2 Hour averages</p>
+                </div>
                 <!-- container for conditional blurb -->
                 <div class="blurb"></div>
             </div>
@@ -68,7 +72,7 @@
     
     <!-- footer -->
     <footer>
-        <p>©granite+creaosote 2018</p>
+        <p>©granite+creosote 2018</p>
     </footer>
 
     <!-- import of required scripts -->
