small mobile refinements, added modul functionality and some creator links

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Run Forecast</title>
+    <title>Run Forecast Run</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
         crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500" rel="stylesheet">
@@ -18,7 +18,7 @@
     <!-- START OF HEADER -->
     <header class="landingPage">
         <div class="wrapper">
-            <h1>Run Forecast</h1>
+            <h1>Run Forecast Run</h1>
             <!-- //form that appears on splash page-->
             <form action="submit" class="searchForm">
                 <div class="formContainer">
@@ -72,7 +72,7 @@
     
     <!-- footer -->
     <footer>
-        <p>©granite+creosote 2018</p>
+        <p>©<a target="_blank" href="https://mikeycouture.com/">granite</a>+<a target="_blank" href="http://lucamorellato.com/">creosote</a> 2018</p>
     </footer>
 
     <!-- import of required scripts -->
